added experiment markers to range difference figure

--- a/Manuscripts/cog-psych/cogpsych.tex
+++ b/Manuscripts/cog-psych/cogpsych.tex
@@ -479,7 +479,7 @@ For each possible stimulus, we compiled the range differences across all the cat
 \label{eq:rangediff-bayes}
 \end{equation}
 \
-where $\mu_0$ is the prior mean, $\nu_0$ is a prior scale parameter (controlling the weighting of the $\mu_0$), and $n$ is the number of categories in which the stimulus was a member (i.e., the number of scores in $x$). The default assumption is that there is an equal amount of range along the X- and Y-axes, and so we set $\mu_0 = 0$. Likewise, to give a moderate amount of weighting to the prior mean we set $\nu_0 = 1$, though our results are robust to a range of values. Within this approach, the resulting aggregation is a trade-off between the number of generations and the strength of the range difference within each generated category. Infrequently generated stimuli, as well as those with both strongly positive and negative scores, are given neutral difference scores. The results of our analysis\footnote{Prior to plotting, data was processed using a Gaussian filter with $\sigma = 0.8$} are shown in Figure \ref{fig:range-diff-gradients}.
+where $\mu_0$ is the prior mean, $\nu_0$ is a prior scale parameter (controlling the weighting of the $\mu_0$), and $n$ is the number of categories in which the stimulus was a member (i.e., the number of scores in $x$). The default assumption is that there is an equal amount of range along the X- and Y-axes, and so we set $\mu_0 = 0$. Likewise, to give a moderate amount of weighting to the prior mean we set $\nu_0 = 1$, though our results are robust to a range of values. Within this approach, the resulting aggregation is a trade-off between the number of generations and the strength of the range difference within each generated category. Infrequently generated stimuli, as well as those with both strongly positive and negative scores, are given neutral difference scores\footnote{Prior to plotting, data was also processed using a Gaussian filter with $\sigma = 0.8$}. 
 
 \nbcnote{Those two paragraphs are, i think, either: (A) too specific and could be in an appendix, or (B) totally straightforward to anyone who knows about Bayesian stats, and so we just need a normal inverse gamma cite.}
 
@@ -490,15 +490,14 @@ where $\mu_0$ is the prior mean, $\nu_0$ is a prior scale parameter (controlling
     \caption{Behavioral and simulated range difference gradients. Each panel shows, for each stimulus, the dimensional orientation of the categories it was generated into: vertically aligned `columns' versus horizontally aligned `rows'.}
     \nbcnote{Need to run this on lando with many more samples. current = 30}
     \label{fig:range-diff-gradients}
-  	\jlanote{This is beautiful. I'd like to add one thing to it. On the left margin have something that says "Experiment 1" and groups the top 3 rows, and then "Experiment 2" for the bottom two.}
     \end{center}
 \end{figure}
 
-These data reveal strong and consistent patterns across all the conditions we tested in Experiments 1 and 2: generated categories are more tightly distributed along the axis in which they are distinct. For example, in the `Cluster' condition, exemplars in the bottom-left of the space are more often generated into vertically aligned categories, and exemplars in the top-right are more often generated into horizontally aligned categories. Similarly, in the `Bottom' and `Middle' conditions, horizontally aligned categories are generated above and below the experimenter-defined categories, while vertically-aligned categories are generated to the sides. In the `Row' condition, most categories are horizontally aligned, and lie along the upper areas of the space. There are no strong range difference patterns in the XOR condition.
+The results of our analysis are shown in Figure \ref{fig:range-diff-gradients}. These data reveal strong and consistent patterns across all the conditions we tested in Experiments 1 and 2: generated categories are more tightly distributed along the axis in which they are distinct. For example, in the `Cluster' condition, exemplars in the bottom-left of the space are more often generated into vertically aligned categories, and exemplars in the top-right are more often generated into horizontally aligned categories. Similarly, in the `Bottom' and `Middle' conditions, horizontally aligned categories are generated above and below the experimenter-defined categories, while vertically-aligned categories are generated to the sides. In the `Row' condition, most categories are horizontally aligned, and lie along the upper areas of the space. There are no strong range difference patterns in the XOR condition.
 
 These patterns of performance clearly depict the interdependence between the distributional structure and location of generated concepts. Our results can, in some sense, be interpreted in terms of local minimization of between-category similarity: by distributing the generated category away from members of the experimenter-defined category, participants may increase the degree of between-category distance without drastically altering the degree of within-category similarity.
 
-To attempt to explain our findings within the PACKER, copy-and-tweak- and hierarchical sampling models, we conducted simulations using an individual-differences approach. As noted in Section \ref{section:individual-diffs}, row- and column-like categories can be produced by within model through changes to the weighting of each dimension. Given this information, we may use the models to simulate each participant's generation separately, with the importance of each dimension set according to the relative range of the participant's generated category along each dimension. 
+To attempt to explain our findings within the PACKER, copy-and-tweak- and hierarchical sampling models, we conducted simulations using an individual-differences approach. As noted in Section \ref{section:individual-diffs}, row- and column-like categories can be produced by each model through changes to the weighting of each dimension. Given this information, we may use the models to simulate each participant's generation separately, with the importance of each dimension set according to the relative range of the participant's generated category along each dimension. 
 
 In the PACKER and copy-and-tweak models, the attention weights, $w$, specify the importance of each dimension in the computation of similarity. While there exist methods to find the optimal attention weighting scheme given a classification \citep[see][]{vanpaemel2012using}, for simplicity we may assume that the Alpha and Beta categories are distinct along dimensions that the Betas do not vary on. Thus, the weighting for a given participant can be computed as:
 
@@ -511,16 +510,13 @@ w_k = \dfrac
 % 
 where $\theta_w$ is a free parameter controlling how differences in range correspond to differences in weights (functioning similarity to the $\theta$ parameter in each of the models), and $\text{range}(k)$ is the range of examples generated by the participant along dimension $k$. In our simulations $\theta_w = 1.5$, though the results are robust and similar for other $\theta_w$ values. The resulting $w$ values are thus inversely proportional to the range of generated categories along each dimension, with less range corresponding to greater weighting.
 
-In the hierarchical sampling model, the covariance matrix specifying the prior domain distribution, $\Sigma_0$, can be used to similar effect. This covariance matrix specifies the amount of variance assumed along each dimension (as well as the dimensional correlations) across the domain of categories. The covariance matrix for a newly generated category, $\Sigma_B$, is based on the assumed $\Sigma_0$ as well as the distributions of previously learned categories (see Appendix \ref{ap:hsampling-definition}). Thus, the importance of each feature can be coded into $\Sigma_0$ to alter the dimensional variance of generated categories. 
-
 Unlike the PACKER and copy-and-tweak models, the hierarchical sampling model's dimensional variances correspond to the assumed variance of generated categories along each dimension (rather than the inverse of the variance). Thus, a different transformation is appropriate for incorporating the weights computed in Equation \ref{eq:range-weight}. For the hierarchical sampling model, we computed the dimensional variances according to: $\lambda (1-w_k)d$, where $\lambda$ is a free parameter specifying the overall assumed variance of the domain, and $d$ is the number of dimensions. Under this approach, evenly distributed weights correspond to an assumed variance of $\lambda$. Likewise, larger values of $w$, which are produced when the generated category is tightly distributed along one dimension, correspond to smaller assumed variances. 
 
-\nbcnote{This works for 2D, but not 3D and beyond (as $1-w_k$ would not produce a valid weighting).}
-\jlanote{I renamed $\lambda$ because $\lambda$ is reserved for the correlation parameter of a covariance matrix (especially a $2 \times 2$).}
+\nbcnote{This works for 2D, but not 3D and beyond (as $1-w_k$ would not produce a valid weighting). Maybe we should make a note of that, or design something more general.}
 
 Each model was used to simulate each participant's generation independently, with the importance of each dimension set according to the participant's generated category. The other free parameters within each model were set as in Table \ref{table:global-model-fits}. Every participant's generation was simulated \textbf{NUMBER} of times, resulting in \textbf{NUMBER * PARTICIPANTS} categories generated by each model. For comparison with our behavioral results, we then computed the range difference gradient identically as with the behavioral data. The results are shown in Figure \ref{fig:range-diff-gradients}.
 
-As in the more traditional model evaluation procedure described above, PACKER provided a much closer match to our behavioral results than the copy-and-tweak and hierarchical sampling models. In all conditions, PACKER distributes categories similarly to the behavioral data: horizontally-aligned categories tend to be placed above and below members of the experimenter-defined category, and vertically-aligned categories tend to be placed to the sides. Conversely, because the copy-and-tweak and hierarchical sampling models are insensitive to category contrast, these models do not produce any systematic patterns of association between category location and distributional structure. The sole exception is within the `Row' condition, in which the majority of participants generated a `Row'-like category, widely distributed along the X-axis but not the Y-axis. In these case, both models are initialized with weights that produce Row categories, but because category contrast is not considered, categories are uniformly generated across the entire domain, rather than concentrated within the upper-regions as observed behaviorally.
+As in the more traditional model evaluation procedure described above, PACKER provided a much closer match to our behavioral results than the copy-and-tweak and hierarchical sampling models. In all conditions, PACKER distributes categories similarly to the behavioral data: horizontally-aligned categories tend to be placed above and below members of the experimenter-defined category, and vertically-aligned categories tend to be placed to the sides. Conversely, because the copy-and-tweak and hierarchical sampling models are insensitive to category contrast, these models do not produce any systematic patterns of association between category location and distributional structure. The sole exception is within the `Row' condition, in which the majority of participants generated a `Row'-like category, widely distributed along the X-axis but not the Y-axis. In these cases, both models are initialized with weights that produce Row categories, but because category contrast is not considered, categories are uniformly generated across the entire domain, rather than concentrated within the upper-regions as observed behaviorally.
 
 
 \section{General Discussion}
@@ -542,6 +538,8 @@ Nonetheless, these classic effects are a core element of the phenomenology of cr
 As it stands, however, PACKER's mathematical basis is subject to a wide variety of interpretations, leading to distinct views on the nature of creative generation. 
 %\nbcnote{That sounds like a good spot to include importance sampling}
 \jlanote{This is pretty disorganized at the moment. There's a lot of good in here though. Here's the structure I'd like to see. Please move and reorganize it into these subsections}
+
+
 Summary of results
 \subsection{Implications for creative cognition}
 more on the general theories/philosophy of creative cognition and what we bring to the table.
